--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<title></title>
 		<style type="text/css">
 
 		</style>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 	</head>
+
 	<body>
 		<div id="app">
-			<tarefa>
+			<!-- <tarefa>
 				teste de tarefa
 			</tarefa>
-			<lista-tarefas></lista-tarefas>
+			<lista-tarefas></lista-tarefas> -->
+
+			<section class="section">
+		    <div class="container">
+		      <h1 class="title">
+		        Hello World
+		      </h1>
+		      <p class="subtitle">
+		        My first website with <strong>Bulma</strong>!
+		      </p>
+		      <message message-title="ALERT!">PLMDDS</message>
+		    </div>
+  		</section>
 		</div>
 
-		<script src="https://unpkg.com/vue"></script>
+  	<script src="https://unpkg.com/vue"></script>
 		<script src="main.js"></script>
 	</body>
+
 </html>
