--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 		        My first website with <strong>Bulma</strong>!
 		      </p>
 		      <message message_title="ALERT!">PLMDDS</message>
-		      <modal ref="alert_modal">PLMDDS</modal>
+		      <modal ref="alert_modal">
+						<template slot="header">TESTE DE TÍTULO</template>
+						<template slot="confirm-button">HEHEHEHE</template>
+						<template slot="cancel-button">HIHIHIHI</template>
+						PLMDDS</modal>
 		      <div class="buttons has-addons is-right">
 						<a class="button is-primary is-outlined" @click="toggleModal">Show Modal!</a>
 					</div>
