--- a/index.html
+++ b/index.html
@@ -31,12 +31,67 @@
 		      <message message_title="ALERT!">PLMDDS</message>
 		      <modal ref="alert_modal">
 						<template slot="header">TESTE DE TÍTULO</template>
-						<template slot="confirm-button">HEHEHEHE</template>
-						<template slot="cancel-button">HIHIHIHI</template>
+						<template slot="confirm-button">confirm</template>
+						<template slot="cancel-button">cancel</template>
 						PLMDDS</modal>
 		      <div class="buttons has-addons is-right">
 						<a class="button is-primary is-outlined" @click="toggleModal">Show Modal!</a>
 					</div>
+					<tabs>
+						<tab name="Lorem I">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+							Donec in volutpat diam. Ut a rutrum justo. Phasellus 
+							accumsan molestie ex, a accumsan leo vestibulum ac. 
+							Donec eget nunc ante. Donec ac diam rutrum, hendrerit 
+							nibh euismod, cursus risus. Interdum et malesuada fames 
+							ac ante ipsum primis in faucibus. Mauris tempor molestie 
+							lorem sed tincidunt. Duis feugiat facilisis luctus. 
+							Suspendisse eu aliquet justo. Nullam id pharetra est. 
+							Donec est purus, porta sed finibus nec, ullamcorper quis ipsum. 
+							Integer gravida lorem metus, quis dictum purus lobortis at.
+							Morbi consectetur accumsan ornare.
+						</tab>
+						<tab name="Lorem II">
+							Suspendisse ut ex at tellus condimentum vehicula. Phasellus
+							suscipit nibh ac ipsum porttitor ullamcorper. Nullam 
+							turpis ligula, tempor eu lobortis nec, scelerisque et mi.
+							Integer pellentesque posuere condimentum. Pellentesque 
+							habitant morbi tristique senectus et netus et malesuada 
+							fames ac turpis egestas. Donec et condimentum massa. Mauris 
+							dignissim ipsum erat, id scelerisque augue sodales non. 
+							Praesent hendrerit tempus augue, id mollis orci placerat sed. 
+							Ut viverra tortor et mi ornare, eu malesuada arcu dictum. 
+							Curabitur commodo venenatis urna. Pellentesque est ex, 
+							facilisis eget lacus in, imperdiet varius risus. Aliquam
+							in ornare ante. Vestibulum ante ipsum primis in faucibus
+							orci luctus et ultrices posuere cubilia Curae;
+						</tab>
+						<tab name="Lorem III">
+							Proin volutpat tincidunt commodo. Quisque sed neque vel 
+							risus sollicitudin tincidunt eget vitae velit. Phasellus 
+							blandit lacus ac sem vulputate, eget aliquam ante gravida. 
+							Integer orci orci, condimentum ac justo nec, blandit suscipit 
+							erat. Sed risus ante, sollicitudin id facilisis ac, consectetur 
+							sed nibh. Pellentesque molestie lectus sed enim viverra finibus. 
+							Sed congue pretium nibh, quis mollis ante porttitor sed. 
+							Pellentesque ultrices est dolor, quis consectetur lacus varius 
+							euismod. Duis ut est quis est bibendum dapibus. Donec porta 
+							laoreet nulla, eu placerat lacus blandit vitae. Sed aliquet 
+							euismod quam id consectetur. Sed id tincidunt dui. Morbi ut 
+							ex eu risus tempor accumsan. Ut posuere odio non turpis rhoncus 
+							scelerisque. Lorem ipsum dolor sit amet, consectetur adipiscing 
+							elit. Cras eleifend, neque ut varius volutpat, sem sem semper 
+							eros, et volutpat nisl elit ut enim.
+						</tab>
+						<tab name="Lorem IV">
+							Donec elementum quam ut mauris lobortis iaculis a in turpis. 
+							Donec ornare feugiat orci nec venenatis. Morbi felis nulla, 
+							mollis ut lorem vitae, congue faucibus nisl. Fusce malesuada 
+							viverra fringilla. Sed eget fringilla sem, et pharetra elit. 
+							In malesuada bibendum ex eget malesuada. Nam eleifend accumsan 
+							neque, in semper ligula vestibulum ut.
+						</tab>
+					</tabs>
 		    </div>
   		</section>
 		</div>
